--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
             <h1 class="text-center">YOU</h1>
             <div class="healthbar">
                 <div class="healthbar text-center" 
-                style="background-color: green; margin: 0; color: white;"
+                :class="{
+                    'healthbar--success': playerHealth>50 && playerHealth<=100,
+                    'healthbar--warning': playerHealth<=50 && playerHealth>=20, 
+                    'healthbar--danger': playerHealth<20 && playerHealth>=0
+                    }"
                 :style="{width: playerHealth + '%'}">
                     {{playerHealth}}
                 </div>
@@ -23,7 +27,11 @@
             <h1 class="text-center">MONSTER</h1>
             <div class="healthbar">
                 <div class="healthbar text-center" 
-                style="background-color: green; margin: 0; color: white;"
+                :class="{
+                    'healthbar--success': playerHealth>50 && playerHealth<=100,
+                    'healthbar--warning': playerHealth<=50 && playerHealth>=20, 
+                    'healthbar--danger': playerHealth<20 && playerHealth>=0
+                    }"
                 :style="{width: monsterHealth + '%'}">
                     {{monsterHealth}}
                 </div>
